summative.moria.Moria.scala.error
Compilation error:
Moria:11: error: not found: value a
        if(a==0){
           ^Moria:12: error: not found: value a
           a=1
           ^Moria:33: error: Boolean(true) does not take parameters
      return true{
                 ^Moria:33: warning: enclosing method Biscuit has result type Unit: return value discarded
      return true{
      ^